examples/test/testpolicy948.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy948
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key3: value35
      key41: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value18
          key17: value7
      podSelector:
        matchLabels:
          key36: value2
          key39: value27
